--- a/games.html
+++ b/games.html
@@ -37,11 +37,7 @@
     </nav>
     <div class="container-fluid test">
         <div class="row">
-            <div class="col uvod">
-                <div class="uvod-tekst">
-                    <h1>Los Angeles Lakers</h1>
-                    <h3>National Basketball Asociation</h3>
-                </div>
+            <div class="col uvod uvod-team">
             </div>
         </div>
     </div>
@@ -121,43 +117,23 @@
             </a>
         </div>
     </div>
-    <div class="container-fluid igraci">
-        <h6>SQUAD</h6>
-        <h1>THE FIRST TEAM</h1>
-        <div class="container">
-            <div class="row">
-                <div class="col igrac1">
-                    <img src="img/caruso.jpg" alt="">
-                    <h6>Point Guard</h6>
-                    <h3>Alex Caruso</h3>
-                </div>
-                <div class="col igrac1">
-                    <img src="img/kcp.jpg" alt="">
-                    <h6>Shooting Guard</h6>
-                    <h3>Kentavious Caldwell-Pope</h3>
-                </div>
-                <div class="col igrac1">
-                    <img src="img/lebron.jpg" alt="">
-                    <h6>Small Forward</h6>
-                    <h3>LeBron James</h3>
-                </div>
-                <div class="col igrac1">
-                    <img src="img/ad.jpg" alt="">
-                    <h6>Power Forward</h6>
-                    <h3>Anthony Davis</h3>
-                </div>
-                <div class="col igrac1">
-                    <img src="img/gasol.jpg" alt="">
-                    <h6>Center</h6>
-                    <h3>Marc Gasol</h3>
-                </div>
-            </div>
-        </div>
-        <div class="row igraci-dugme">
-            <button type="button" class="btn btn-primary dugme">View gallery</button>
-        </div>
+    <div class="container-fluid team-next-game">
+        <h6>NEXT GAME</h6>
+        <h1>TIME UNTIL THE NEXT GAME</h1>
+        <p id="timer"></p>
+        <ul class="rezultati">
+            <li>
+                <img src="img/pozadina2.png" alt="">
+            </li>
+            <li>
+                <h1>VS</h1>
+            </li>
+            <li>
+                <img src="img/detroit2.png" alt="">
+            </li>
+        </ul>
     </div>
-    <div class="container-fluid tabela">
+    <div class="container-fluid tabela tabela-games">
         <h6>TABLE</h6>
         <h1>NBA WESTERN CONFERENCE</h1>
         <div class="container">
@@ -226,78 +202,6 @@
                     <td>9</td>
                 </tr>
             </table>
-        </div>
-    </div>
-    <div class="container-fluid shop">
-        <h6>SHOP</h6>
-        <h1>TOP PRODUCTS</h1>
-        <div class="container">
-            <div class="row">
-                <div class="col shop1">
-                    <div class="card">
-                        <div class="display-show1">
-                            <img class="card-img-top" src="img/dres.png" alt="Card image">
-                        </div>
-                        <div class="display-hidden1">
-                            <img class="card-img-top" src="img/dres2.png" alt="Card image">
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Jersays</h4>
-                            <p class="card-text">Los Angeles Lakers LeBron James 2019-20 Icon Edition Swingman Jersey
-                            </p>
-                            <a href="#" class="btn btn-primary">See Profile</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col shop1">
-                    <div class="card">
-                        <div class="display-show2">
-                            <img class="card-img-top" src="img/duks.png" alt="Card image">
-                        </div>
-                        <div class="display-hidden2">
-                            <img class="card-img-top" src="img/duks2.png" alt="Card image">
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Hoodies</h4>
-                            <p class="card-text">Los Angeles Lakers City Edition Yellow (Gold) Logo Hoody
-                            </p>
-                            <a href="#" class="btn btn-primary">See Profile</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col shop1">
-                    <div class="card">
-                        <div class="display-show">
-                            <img class="card-img-top" src="img/majica.png" alt="Card image">
-                        </div>
-                        <div class="display-hidden">
-                            <img class="card-img-top" src="img/majica2.png" alt="Card image">
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Shirts</h4>
-                            <p class="card-text">Los Angeles Lakers 2020 NBA Champions Ready To Play Roster T-Shirt
-                            </p>
-                            <a href="#" class="btn btn-primary">See Profile</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col shop1">
-                    <div class="card">
-                        <div class="display-show3">
-                            <img class="card-img-top" src="img/kapa.png" alt="Card image">
-                        </div>
-                        <div class="display-hidden3">
-                            <img class="card-img-top" src="img/kapa2.png" alt="Card image">
-                        </div>
-                        <div class="card-body">
-                            <h4 class="card-title">Accessories</h4>
-                            <p class="card-text">Los Angeles Lakers 2020 NBA Champions 9FIFTY Side Patch Snapback Cap
-                            </p>
-                            <a href="#" class="btn btn-primary">See Profile</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
     <footer class="container-fluid">
