--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="games.html">Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Shop</a>
+                    <a class="nav-link" href="history.html">History</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="gallery.html">Gallery</a>
@@ -63,34 +63,56 @@
         <div class="container">
             <div class="row">
                 <div class="col igrac1">
-                    <img src="img/caruso.jpg" alt="">
+                    <img src="img/caruso-removebg-preview.png" alt="">
                     <h6>Point Guard</h6>
                     <h3>Alex Caruso</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/kcp.jpg" alt="">
+                    <img src="img/kcp-removebg-preview.png" alt="">
                     <h6>Shooting Guard</h6>
                     <h3>Kentavious Caldwell-Pope</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/lebron.jpg" alt="">
+                    <img src="img/lebron-removebg-preview.png" alt="">
                     <h6>Small Forward</h6>
                     <h3>LeBron James</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/ad.jpg" alt="">
+                    <img src="img/ad-removebg-preview.png" alt="">
                     <h6>Power Forward</h6>
                     <h3>Anthony Davis</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/gasol.jpg" alt="">
+                    <img src="img/gasol-removebg-preview.png" alt="">
                     <h6>Center</h6>
                     <h3>Marc Gasol</h3>
                 </div>
+                <div class="col igrac1">
+                    <img src="img/sruder.png" alt="">
+                    <h6>Point Guard</h6>
+                    <h3>Dennis Schroder</h3>
+                </div>
+                <div class="col igrac1">
+                    <img src="img/tht.png" alt="">
+                    <h6>Shooting Guard</h6>
+                    <h3>Talen Horton-Tucker</h3>
+                </div>
+                <div class="col igrac1">
+                    <img src="img/kuzma.png" alt="">
+                    <h6>Small Forward</h6>
+                    <h3>Kyle Kuzma</h3>
+                </div>
+                <div class="col igrac1">
+                    <img src="img/moris.png" alt="">
+                    <h6>Power Forward</h6>
+                    <h3>Markieff Morris</h3>
+                </div>
+                <div class="col igrac1">
+                    <img src="img/harel.png" alt="">
+                    <h6>Center</h6>
+                    <h3>Montrezl Harrell</h3>
+                </div>
             </div>
-        </div>
-        <div class="row igraci-dugme">
-            <button type="button" class="btn btn-primary dugme">View all players</button>
         </div>
     </div>
     <!-- MAIN END -->
