--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="games.html">Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Shop</a>
+                    <a class="nav-link" href="history.html">History</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="gallery.html">Gallery</a>
@@ -60,7 +60,7 @@
                         <li>
                             <img src="img/atlanta3.png" alt="">
                         </li>
-                        <li>
+                        <li id="score">
                             <h1>99-107</h1>
                         </li>
                         <li>
@@ -73,8 +73,8 @@
                         <li>
                             <img src="img/boston3.png" alt="">
                         </li>
-                        <li>
-                            <h1>95-95</h1>
+                        <li id="score">
+                            <h1>96-95</h1>
                         </li>
                         <li>
                             <img src="img/pozadina2.png" alt="">
@@ -86,7 +86,7 @@
                         <li>
                             <img src="img/detroit2.png" alt="">
                         </li>
-                        <li>
+                        <li id="score">
                             <h1>107-92</h1>
                         </li>
                         <li>
@@ -99,7 +99,7 @@
                         <li>
                             <img src="img/phila2.png" alt="">
                         </li>
-                        <li>
+                        <li id="score">
                             <h1>107-106</h1>
                         </li>
                         <li>
@@ -125,11 +125,11 @@
             <li>
                 <img src="img/pozadina2.png" alt="">
             </li>
-            <li>
+            <li id="score">
                 <h1>VS</h1>
             </li>
             <li>
-                <img src="img/detroit2.png" alt="">
+                <img src="img/dever3.png" alt="">
             </li>
         </ul>
     </div>
