--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="games.html">Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Shop</a>
+                    <a class="nav-link" href="history.html">History</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="gallery.html">Gallery</a>
@@ -64,7 +64,7 @@
                         <li>
                             <img src="img/atlanta3.png" alt="">
                         </li>
-                        <li>
+                        <li id="score">
                             <h1>99-107</h1>
                         </li>
                         <li>
@@ -77,7 +77,7 @@
                         <li>
                             <img src="img/boston3.png" alt="">
                         </li>
-                        <li>
+                        <li id="score">
                             <h1>95-95</h1>
                         </li>
                         <li>
@@ -90,7 +90,7 @@
                         <li>
                             <img src="img/detroit2.png" alt="">
                         </li>
-                        <li>
+                        <li id="score">
                             <h1>107-92</h1>
                         </li>
                         <li>
@@ -103,7 +103,7 @@
                         <li>
                             <img src="img/phila2.png" alt="">
                         </li>
-                        <li>
+                        <li id="score">
                             <h1>107-106</h1>
                         </li>
                         <li>
@@ -127,34 +127,34 @@
         <div class="container">
             <div class="row">
                 <div class="col igrac1">
-                    <img src="img/caruso.jpg" alt="">
+                    <img src="img/caruso-removebg-preview.png" alt="">
                     <h6>Point Guard</h6>
                     <h3>Alex Caruso</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/kcp.jpg" alt="">
+                    <img src="img/kcp-removebg-preview.png" alt="">
                     <h6>Shooting Guard</h6>
                     <h3>Kentavious Caldwell-Pope</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/lebron.jpg" alt="">
+                    <img src="img/lebron-removebg-preview.png" alt="">
                     <h6>Small Forward</h6>
                     <h3>LeBron James</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/ad.jpg" alt="">
+                    <img src="img/ad-removebg-preview.png" alt="">
                     <h6>Power Forward</h6>
                     <h3>Anthony Davis</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/gasol.jpg" alt="">
+                    <img src="img/gasol-removebg-preview.png" alt="">
                     <h6>Center</h6>
                     <h3>Marc Gasol</h3>
                 </div>
             </div>
         </div>
         <div class="row igraci-dugme">
-            <button type="button" class="btn btn-primary dugme">View gallery</button>
+            <a href="gallery.html"><button type="button" class="btn btn-primary dugme">View all players</button></a>
         </div>
     </div>
     <div class="container-fluid tabela">
@@ -232,7 +232,7 @@
         <h6>SHOP</h6>
         <h1>TOP PRODUCTS</h1>
         <div class="container">
-            <div class="row">
+            <div class="row shop-row">
                 <div class="col shop1">
                     <div class="card">
                         <div class="display-show1">
@@ -259,7 +259,7 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Hoodies</h4>
-                            <p class="card-text">Los Angeles Lakers City Edition Yellow (Gold) Logo Hoody
+                            <p class="card-text">Los Angeles Lakers City Edition Logo Hoody
                             </p>
                             <a href="#" class="btn btn-primary">See Profile</a>
                         </div>
@@ -307,12 +307,7 @@
                     <span>SIGN UP</span>
                 </h2>
             </div>
-            <div class="col">
-                <p>
-                    <span>Become a member of our online community and get tickets to upcoming matches or sports events
-                        faster!</span>
-                </p>
-            </div>
+
             <div class="col">
                 <form action="">
                     <input class="mail-input-footer" type="email" name="" id="" placeholder="Email">
