--- a/history.html
+++ b/history.html
@@ -136,12 +136,6 @@
                 </h2>
             </div>
             <div class="col">
-                <p>
-                    <span>Become a member of our online community and get tickets to upcoming matches or sports events
-                        faster!</span>
-                </p>
-            </div>
-            <div class="col">
                 <form action="">
                     <input class="mail-input-footer" type="email" name="" id="" placeholder="Email">
                     <input class="mail-button-footer" type="submit" value="Submit">
@@ -151,10 +145,10 @@
         <div class="row">
             <div class="col-9">
                 <ul class="footer-menu">
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">TEAM</a></li>
-                    <li><a href="">GALLERY</a></li>
-                    <li><a href="">SHOP</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="games.html">GAMES</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="history.html">HISTORY</a></li>
                 </ul>
             </div>
             <div class="col-3">
