--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@
         <div class="row">
             <div class="col-9">
                 <ul class="footer-menu">
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">TEAM</a></li>
-                    <li><a href="">GALLERY</a></li>
-                    <li><a href="">SHOP</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="games.html">GAMES</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="history.html">HISTORY</a></li>
                 </ul>
             </div>
             <div class="col-3">
