--- a/index.html
+++ b/index.html
@@ -301,14 +301,14 @@
         </div>
     </div>
     <footer class="container-fluid">
-        <div class="row">
+        <div class="row footer-row">
             <div class="col">
                 <h2>
                     <span>SIGN UP</span>
                 </h2>
             </div>
 
-            <div class="col">
+            <div class="col footer-dugme-email">
                 <form action="">
                     <input class="mail-input-footer" type="email" name="" id="" placeholder="Email">
                     <input class="mail-button-footer" type="submit" value="Submit">
@@ -324,9 +324,7 @@
                     <li><a href="history.html">HISTORY</a></li>
                 </ul>
             </div>
-            <div class="col-3">
-                <p> AncoraThemes © 2021. All Rights Reserved.</p>
-            </div>
+
         </div>
     </footer>
     <a id="na-pocetak" href="#pocetak">
