--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             </div>
 
             <div class="col footer-dugme-email">
-                <form action="">
+                <form action="" class="forma-dugme">
                     <input class="mail-input-footer" type="email" name="" id="" placeholder="Email">
                     <input class="mail-button-footer" type="submit" value="Submit">
                 </form>
