--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,9 @@
         <div class="collapse navbar-collapse nav-right" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="games.html">Games</a>
                 </li>
                 <li class="nav-item">
@@ -78,7 +81,7 @@
                     <h3>LeBron James</h3>
                 </div>
                 <div class="col igrac1">
-                    <img src="img/ad-removebg-preview.png" alt="">
+                    <img src="img/adnovi.png" alt="">
                     <h6>Power Forward</h6>
                     <h3>Anthony Davis</h3>
                 </div>
