--- a/history.html
+++ b/history.html
@@ -24,6 +24,9 @@
         <div class="collapse navbar-collapse nav-right" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="games.html">Games</a>
                 </li>
                 <li class="nav-item">
