--- a/history.html
+++ b/history.html
@@ -132,14 +132,15 @@
 
     <!-- MAIN END -->
     <footer class="container-fluid">
-        <div class="row">
+        <div class="row footer-row">
             <div class="col">
                 <h2>
                     <span>SIGN UP</span>
                 </h2>
             </div>
-            <div class="col">
-                <form action="">
+
+            <div class="col footer-dugme-email">
+                <form action="" class="forma-dugme">
                     <input class="mail-input-footer" type="email" name="" id="" placeholder="Email">
                     <input class="mail-button-footer" type="submit" value="Submit">
                 </form>
@@ -154,6 +155,7 @@
                     <li><a href="history.html">HISTORY</a></li>
                 </ul>
             </div>
+
         </div>
     </footer>
     <a id="na-pocetak" href="#pocetak">
