--- a/gallery.html
+++ b/gallery.html
@@ -45,6 +45,31 @@
     <div class="container-fluid test">
         <div class="row">
             <div class="col uvod uvod-team">
+                <div class="wrapper">
+                    <div class="slideshows">
+                        <div class="slideshow slideshow--hero">
+                            <div class="slides">
+                                <div class="slide slide1 slajder-gal"></div>
+                                <div class="slide slide2 slajder-gal"></div>
+                                <div class="slide slide3 slajder-gal"></div>
+                            </div>
+                        </div>
+                        <div class="slideshow slideshow--contrast slideshow--contrast--before">
+                            <div class="slides">
+                                <div class="slide slide1 slajder-gal"></div>
+                                <div class="slide slide2 slajder-gal"></div>
+                                <div class="slide slide3 slajder-gal"></div>
+                            </div>
+                        </div>
+                        <div class="slideshow slideshow--contrast slideshow--contrast--after">
+                            <div class="slides">
+                                <div class="slide slide1 slajder-gal"></div>
+                                <div class="slide slide2 slajder-gal"></div>
+                                <div class="slide slide3 slajder-gal"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
