--- a/history.html
+++ b/history.html
@@ -128,6 +128,65 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid"><b>
+                <h1>BEST OF LAKERS</h1>
+            </b></div>
+        <section class="models">
+            <div class="modelCont">
+                <div class="d-flex flexcont">
+                    <div class="flex-item">
+                        <div class="flex-item-inner d-flex align-items-end justify-content-center"
+                            style="background-image:url(img/lebronupokretu.png)">
+                            <div class="modelInnerText">
+                                <div class="d-flex align-items-center justify-content-start">
+                                    <h1><b>Lebron James (2018-now)</b></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="flex-item-inner d-flex align-items-end justify-content-center"
+                            style="background-image:url(img/slajder2-removebg-preview.png); background-size: 700px;">
+                            <div class="modelInnerText">
+                                <div class="d-flex align-items-center justify-content-start">
+                                    <h1><b>Kobe Bryant (1996-2016)</b></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="flex-item-inner d-flex align-items-end justify-content-center"
+                            style="background-image:url(img/magic-removebg-preview.png)">
+                            <div class="modelInnerText">
+                                <div class="d-flex align-items-center justify-content-start">
+                                    <h1><b>Magic Johnson (1979-1996)</b></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="flex-item-inner d-flex align-items-end justify-content-center"
+                            style="background-image:url(img/karim-removebg-preview.png)">
+                            <div class="modelInnerText">
+                                <div class="d-flex align-items-center justify-content-start">
+                                    <h1><b>Karim Abdul-Jabbar (1975-1989)</b></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="flex-item-inner d-flex align-items-end justify-content-center"
+                            style="background-image:url(img/shaq-removebg-preview.png); background-size: 550px;">
+                            <div class="modelInnerText">
+                                <div class="d-flex align-items-center justify-content-start">
+                                    <h1><b>Shaquille O’Neal (1996-2004)</b></h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <!-- MAIN END -->
@@ -155,7 +214,6 @@
                     <li><a href="history.html">HISTORY</a></li>
                 </ul>
             </div>
-
         </div>
     </footer>
     <a id="na-pocetak" href="#pocetak">
