NE ZNAM STA RADIM

--- a/gallery.html
+++ b/gallery.html
@@ -87,7 +87,7 @@
     </div>
     <div class="container-fluid igraci">
         <h6>SQUAD</h6>
-        <h1>THE FIRST TEAM</h1>
+        <h1>THE ALL TEAM</h1>
         <div class="container">
             <div class="row">
                 <div class="col igrac1">
